almost finished views

--- a/src/app/components/add-rol/add-rol.component.html
+++ b/src/app/components/add-rol/add-rol.component.html
@@ -16,7 +16,7 @@
             </div>
             <div class="informacion2">
                 <span class="campo-informativo" style="color: rgb(63, 150, 45);" id="tipoControl" >FITOSANITARIO</span>
-                <img src="/assets/img/fitosanitario.png" alt="" class="tipoFitosanitario" routerLink="/reporteControl">
+                <img src="/assets/img/fitosanitario.png" alt="" class="tipoFitosanitario" routerLink="/lotes">
             </div>
             <div class="informacion2" style="display: none;" >
                 <span class="campo-informativo" style="color: rgb(63, 150, 45);" id="tipoControl">FENOLÓGICA</span>
