--- a/src/app/components/arboles-siguiente/arboles-siguiente.component.html
+++ b/src/app/components/arboles-siguiente/arboles-siguiente.component.html
@@ -16,11 +16,11 @@
     <div class="viewLote">
         <form class="container">
             <div class="encabezado-recoverPass ">
-                <h1 for="" class="descripcion">LOTES DE LA FINCA</h1>
+                <h1 for="" class="descripcion">ÁRBOLES DEL LOTE: 23892</h1>
             </div>
-            <img src="/assets/img/lote.png" alt="" class="imgLote">
+            <img src="/assets/img/arboles.png" alt="" class="imgLote">
             <div class="row">
-                <button style="background: green; font:oblique; color: white;  border-radius: 20px;" class="col btn-1 btn" routerLink="/lotesLista">Siguiente</button>
+                <button style="background: green; font:oblique; color: white;  border-radius: 20px;" class="col btn-1 btn" routerLink="/listArboles">Siguiente</button>
             </div>
         </form>
     </div>
