--- a/src/app/components/lotes-list/lotes-list.component.html
+++ b/src/app/components/lotes-list/lotes-list.component.html
@@ -14,7 +14,52 @@
         </div>
     </div>
 </nav>
-<div class="viewLote">
+
+<div class="viewArboles">
+    <div class="container">
+        <div class="row">
+            <div class="col text-center">
+                <button class="button" routerLink="/newArbol">
+                    <div class="icon-circle"><mat-icon style="color: green;" >add</mat-icon></div>
+                    Agregar Lote
+                  </button>
+            </div>
+        </div>
+        <div class="col text-center">
+            <div class="input-group stylish-input-group">
+              <input [(ngModel)]="searchTerm" (ngModelChange)="searchLotes()" class="form-control" placeholder="Buscar Lote">
+              <span class="input-group-addon">
+                <button type="submit">
+                  <i class="fas fa-search"></i>
+                </button>  
+              </span>
+            </div>
+          </div>
+     
+        <div class="row">
+            <div *ngFor="let lote of filteredLotes" class="col-md-4 col-sm-6">
+                <div class="lote-card">
+                    
+                    <img [src]="lote.fotoArbol" alt="Foto del Árbol" width="30px" height="30px6">
+                    <p>Número de Lote: {{ lote.numeroArbol }}</p>
+                    <p>Árboles en Control: {{ lote.numeroArbol }}</p>
+                    <p>Empleado: {{ lote.nombreEmpleado }}</p>
+                   
+                    <button class="btn btn-primary" ><i class="fas fa-edit"></i></button>
+                    <button class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
+                    <button class="btn btn-dark" routerLink="/statusArbol" ><i class="fas fa-eye"></i></button>
+                    <button class="btn btn-success" routerLink="/arbolesPag" ><i class="fas fa-tree"></i></button>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <ng-container *ngIf="filteredLotes.length === 0">
+                    <p style="text-align: center;">No Existe Ningún Árbol.</p>
+                </ng-container>
+            </div>
+        </div>
+    </div>
+</div>
+<!--<div class="viewLote">
     <form class="container">
         <div class="row">
             <div class="col text-center">
@@ -30,83 +75,31 @@
         <div class="table-container">
             <table class="table">
                 <thead>
-                    <tr>
-                        <th>Foto</th>
-                        <th>Nombre</th>
-                        <th>Ubicación</th>
-                        <th>Opciones</th>
-                        <th>Ver Árboles</th>
-
-                    </tr>
+                  <tr>
+                    <th>Foto</th>
+                    <th>Nombre</th>
+                    <th>Ubicación</th>
+                    <th>Opciones</th>
+                    <th>Ver Árboles</th>
+                  </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Lote A</td>
-                        <td>Ubicación A</td>
-                        <td>
-                            <button class="btn btn-primary" style="width:2px; height: 40px; padding-left: 10px; padding-right: 20px;"><i class="fas fa-edit"></i></button>
-                            <button class="btn btn-danger"style="width:2px; height: 40px; padding-left: 10px; padding-right: 20px;"><i class="fas fa-trash-alt"></i></button>
-                        </td>
-                        <td>
-                            <button class="btn btn-warning" (click)='navigateToOtherView()'><i class="fas fa-eye fa-lg"></i>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Lote A</td>
-                        <td>Ubicación A</td>
-                        <td>
-                            <button class="btn btn-primary" style="width:2px; height: 40px; padding-left: 10px; padding-right: 20px;"><i class="fas fa-edit"></i></button>
-                            <button class="btn btn-danger"style="width:2px; height: 40px; padding-left: 10px; padding-right: 20px;"><i class="fas fa-trash-alt"></i></button>
-                        </td>
-                        <td>
-                            <button class="btn btn-warning"><i class="fas fa-eye fa-lg"></i>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Lote A</td>
-                        <td>Ubicación A</td>
-                        <td>
-                            <button class="btn btn-primary" style="width:2px; height: 40px; padding-left: 10px; padding-right: 20px;"><i class="fas fa-edit"></i></button>
-                            <button class="btn btn-danger"style="width:2px; height: 40px; padding-left: 10px; padding-right: 20px;"><i class="fas fa-trash-alt"></i></button>                        </td>
-                        <td>
-                            <button class="btn btn-warning"><i class="fas fa-eye fa-lg"></i>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>Lote A</td>
-                        <td>Ubicación A</td>
-                        <td>
-                            <button class="btn btn-primary" style="width:2px; height: 40px; padding-left: 10px; padding-right: 20px;"><i class="fas fa-edit"></i></button>
-                            <button class="btn btn-danger"style="width:2px; height: 40px; padding-left: 10px; padding-right: 20px;"><i class="fas fa-trash-alt"></i></button>                        </td>
-                        <td>
-                            <button class="btn btn-warning"><i class="fas fa-eye fa-lg"></i>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>Lote A</td>
-                        <td>Ubicación A</td>
-                        <td>
-                            <button class="btn btn-primary" style="width:2px; height: 40px; padding-left: 10px; padding-right: 20px;"><i class="fas fa-edit"></i></button>
-                            <button class="btn btn-danger"style="width:2px; height: 40px; padding-left: 10px; padding-right: 20px;"><i class="fas fa-trash-alt"></i></button>                        </td>
-                        <td>
-                            <button class="btn btn-warning"><i class="fas fa-eye fa-lg"></i>
-                            </button>
-                        </td>
-                    </tr>
+                  <tr *ngFor="let lote of lotes">
+                    <td>{{ lote.id }}</td>
+                    <td>{{ lote.nombre }}</td>
+                    <td>{{ lote.ubicacion }}</td>
+                    <td>
+                        <button class="btn btn-primary" ><i class="fas fa-edit"></i></button>
+                        <button class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
+                    </td>
+                    <td>
+                        <button class="btn btn-warning" (click)='navigateToOtherView()'><i class="fas fa-eye fa-lg"></i>
+                        </button>
+                    </td>
+                  </tr>
                 </tbody>
-            </table>
+              </table>
+              
         </div>
     </form>
-</div>
-
-
-<app-footer class="app-footer"></app-footer>
+</div>-->
