--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,17 +15,18 @@
                     <i class="fas fa-envelope"></i> 
                     Ingrese su Correo
                 </label>
-                <input type="email" style="background-color: white; " class="form-control" id="correo" #correo aria-describedby="emailHelp" placeholder="juan@gmail.com">
+                <input type="email" style="background-color: white; " class="form-control" id="correo" #correo aria-describedby="emailHelp" placeholder="jefferson@gmail.com" required>
             </div>
             <div class="form-group">
                 <label for="password" style="color: rgb(255, 255, 255); margin-top: 10px;">
                     <i class="fas fa-lock"></i> <!-- Icono de candado -->
                     Ingrese su Contraseña
                 </label>
-                <input type="password" style="background-color: white; " class="form-control" id="contrasena1" #contrasena placeholder="********">
+                <input type="password" style="background-color: white; " class="form-control" id="contrasena" #contrasena placeholder="********" required>
             </div>
             <div class="row">
-                <button style="background: #f63105;" class="col btn-1 btn btn-primary" routerLink="/logueado">Iniciar Sesión</button>
+                <button (click)='logIn(correo.value,contrasena.value)' style="background: #f63105;" class="col btn-1 btn btn-primary">Iniciar Sesión</button>
+                <!--<button style="background: #f63105;" class="col btn-1 btn btn-primary" routerLink="/logueado">Iniciar Sesión</button>-->
                 <button  class="col btn-2 btn btn-primary" routerLink="/registration">Registrarse</button>
             </div>
            
