--- a/src/app/components/logueado/logueado.component.html
+++ b/src/app/components/logueado/logueado.component.html
@@ -9,15 +9,15 @@
     <img src="/assets/img/logo.png" alt="" >
         <div class="tipoControl">
             <div class="informacion1">
-                <span class="campo-informativo" id="nameFinca">Finca la Bendición</span>
+                <span class="campo-informativo" id="nameFinca">{{NombreFinca}}</span>
             </div>
             <div class="informacion2">
                 <label class="label-informativo">ROL</label>
-                <span class="campo-informativo" style="color: rgb(29, 127, 9);" id="name_Rol">OPERADOR</span>
+                <span class="campo-informativo" style="color: rgb(29, 127, 9);" id="name_Rol">{{NombreRol}}</span>
             </div>
             <div class="informacion3">
                 <label class="label-informativo">NOMBRE DEL EMPLEADO</label>
-                <span class="campo-informativo" style="color: rgb(29, 127, 9);" id="name_Epl">JEFFERSON STEVEN RODRÍGUEZ RUEDA</span>
+                <span class="campo-informativo" style="color: rgb(29, 127, 9);" id="name_Epl">{{NombreEmpleado}}</span>
             </div>
             <div class="row">
                 <button style="background: #f63105;" class="col btn-1 btn btn-primary" routerLink="/tipoControl">Ingresar</button>
