--- a/src/app/components/lotes-view/lotes-view.component.html
+++ b/src/app/components/lotes-view/lotes-view.component.html
@@ -17,6 +17,7 @@
         <form class="container">
             <div class="encabezado-recoverPass ">
                 <h1 for="" class="descripcion">LOTES DE LA FINCA</h1>
+                <h1 for="" style="color: rgb(63, 150, 45);"class="descripcion2">{{NombreFinca}}</h1>
             </div>
             <img src="/assets/img/lote.png" alt="" class="imgLote">
             <div class="row">
