--- a/src/app/components/report-control/report-control.component.html
+++ b/src/app/components/report-control/report-control.component.html
@@ -9,7 +9,7 @@
     <div class="container-fluid">
   
       <div class="back-link">
-        <a routerLink="/listArboles">
+        <a routerLink="/tipoControl">
           <i class="fas fa-arrow-left" style="color: rgb(255, 255, 255);"></i>
           <!-- Icono de flecha hacia atrás -->
         </a>
