--- a/src/app/components/lotes-view/lotes-view.component.css
+++ b/src/app/components/lotes-view/lotes-view.component.css
@@ -67,6 +67,15 @@
     padding-top: 20px; /* Ajusta el padding superior para separar más del elemento anterior */
     font-size: 24px;
     text-align: center;
+    
+  }
+  .descripcion2 {
+    color: #000000;
+    font-weight: bold;
+    font-family: value;
+    padding-top: 20px; /* Ajusta el padding superior para separar más del elemento anterior */
+    font-size: 24px;
+    text-align: center;
   }
 .row {
     margin: 40px auto; 
