--- a/src/app/components/tipo-control/tipo-control.component.html
+++ b/src/app/components/tipo-control/tipo-control.component.html
@@ -13,10 +13,11 @@
         <div class="tipoControl">
             <div class="informacion1">
                 <span class="campo-informativo" style="color: white;">TIPO DE CONTROL</span>
+                
             </div>
             <div class="informacion2">
                 <span class="campo-informativo" style="color: rgb(63, 150, 45);" id="tipoControl" >FITOSANITARIO</span>
-                <img src="/assets/img/fitosanitario.png" alt="" class="tipoFitosanitario" routerLink="/reporteControl">
+                <img (click)='tipoControl()' src="/assets/img/fitosanitario.png" alt="" class="tipoFitosanitario" routerLink="/reporteControl">
             </div>
             <div class="informacion2" style="display: none;" >
                 <span class="campo-informativo" style="color: rgb(63, 150, 45);" id="tipoControl">FENOLÓGICA</span>
