--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
             <i class="fas fa-clone"></i>
             <label for="">Lotes</label>
         </div>
-        <div (click)="reporte()" class="cow">
+        <div (click)="finca()" class="cow">
             <i class="fas fa-home"></i>
             <label for="">Finca</label>
         </div>
