--- a/src/app/components/arbol-list/arbol-list.component.html
+++ b/src/app/components/arbol-list/arbol-list.component.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
 
         <div class="back-link">
-            <a routerLink="/arbolesPag">
+            <a routerLink="/lotesLista">
                 <i class="fas fa-arrow-left" style="color: rgb(255, 255, 255);"></i>
                 <!-- Icono de flecha hacia atrás -->
             </a>
@@ -39,17 +39,18 @@
             <div *ngFor="let lote of filteredLotes" class="col-md-4 col-sm-6">
                 <div class="lote-card">
                     
-                    <img [src]="lote.fotoArbol" alt="Foto del Árbol" width="30px" height="30px6">
+                    <img [src]="lote.ImagenArbol" alt="Foto del Árbol" width="30px" height="30px6">
                     <p class="identificador">
                         Identificador:     
                         <span class="color-circle" [ngClass]="lote.color"></span>
                     </p>
                     <p>Número de Árbol: {{ lote.numeroArbol }}</p>
-                    <p>Empleado: {{ lote.nombreEmpleado }}</p>
+                    <p>Empleado: {{ lote.Empleado }}</p>
                     
                     <button class="btn btn-primary" ><i class="fas fa-edit"></i></button>
                     <button class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
                     <button class="btn btn-dark" routerLink="/statusArbol" ><i class="fas fa-eye"></i></button>
+                    <button class="btn btn-warning" routerLink="/statusArbol" ><i class="fas fa-file-medical"></i></button>
                     <button class="btn btn-success" routerLink="/controlArbol" ><i class="fas fa-plus-circle"></i></button>
 
                 </div>
