--- a/src/app/components/new-arbol/new-arbol.component.html
+++ b/src/app/components/new-arbol/new-arbol.component.html
@@ -3,7 +3,7 @@
 <nav class="navbar">
     <div class="container-fluid">
       <div class="back-link">
-        <a routerLink="/lotesLista">
+        <a routerLink="/listArboles">
           <i class="fas fa-arrow-left" style="color: rgb(255, 255, 255);"></i>
         </a>
       </div>
@@ -25,8 +25,8 @@
                     <h1 class="descripcion">Crear Árbol</h1>
                 </div>
                 <div class="form-group">
-                    <label for="email" style="color: rgb(255, 255, 255); margin-top: 10px; font-weight: bold;">
-                        Ingrese el Nombre del Empleado
+                    <label for="email" style="color: rgb(255, 255, 255); margin-top: 10px; font-weight: bold;" >
+                      Nombre del Empleado
                     </label>
                     <input type="text" style="background-color: white; " class="form-control" id="namePropietario" >
                 </div>
