--- a/src/app/components/report-control/report-control.component.css
+++ b/src/app/components/report-control/report-control.component.css
@@ -1,165 +1,249 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f0f0f0;
-}
-.navbar {
-    background-color: #623100;
-  }
-  
-  .navbar {
-    display: flex;
-    justify-content: center; /* Cambia "flex-end" a "center" para centrar horizontalmente */
-    align-items: center;
-    padding: 10px;
-  }
-  
-  h1 {
-    color: white;
-    font-weight: bold;
-    margin: 0;
-  }
-  .imgLote {
-    width: 81px;
-    height: 84px;
-    margin: 40px auto; /* Ajusta el margen para mayor separación y centrado horizontal */
-    display: block;
-    z-index: 3;
-  }
-  .logo {
-    margin-left: 10px;
-  }
-  .logo-circle {
-    width: 50px; /* Ajusta el tamaño del círculo */
-    height: 50px; /* Ajusta el tamaño del círculo */
-    background-color: white;
-    border-radius: 50%; /* Convierte en un círculo */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 10px; /* Ajusta el margen izquierdo según tus necesidades */
-  }
-  
-  .logo-img {
-  width: 100%;
-    height: auto; /* Mantiene la proporción de la imagen */
-  }
-  .back-link {
-    top: 20px;
-    left: 20px;
-    font-size: 30px;
-    cursor: pointer;
-    color: white;
-    font-size: 24px;
-    z-index: 8; /* Asegura que el enlace esté por encima de la media luna */
-  }
-  
-  .circle-container {
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-  }
-  
-  .circle-container img {
-    width: 150px; /* Ajusta el tamaño de la imagen */
-    height: 150px; /* Ajusta el tamaño de la imagen */
-    border-radius: 50%; /* Convierte en un círculo */
-    box-shadow:  0 0 10px rgba(0, 0, 0, 0.5); /* Agrega una sombra */
-  }
-.report-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-}
-
-.report-content {
-    border: 1px solid #ccc;
-    padding: 20px;
-}
-
-.download-button {
-    background-color: green;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-}
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f0f0f0;
-}
-
 .navbar {
   background-color: #623100;
+}
+
+.navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: center; /* Cambia "flex-end" a "center" para centrar horizontalmente */
   align-items: center;
-  padding: 10px 20px;
+  padding: 10px;
+}
+
+h1 {
   color: white;
+  font-weight: bold;
+  margin: 0;
+}
+
+
+/* Estilos generales de la tabla */
+
+
+
+.container {
+  width: 80%;
+  height: auto;
+}
+.viewLote {
+  position: absolute;
+  width: 100%;
+  top: 10%; /* Ajusta el valor para cambiar la distancia desde arriba */
+  bottom: 0;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+}
+
+.logo {
+  margin-left: 10px;
+}
+.logo-circle {
+  width: 50px; /* Ajusta el tamaño del círculo */
+  height: 50px; /* Ajusta el tamaño del círculo */
+  background-color: white;
+  border-radius: 50%; /* Convierte en un círculo */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10px; /* Ajusta el margen izquierdo según tus necesidades */
 }
 
 .logo-img {
-  width: 40px;
-  height: 40px;
+width: 100%;
+  height: auto; /* Mantiene la proporción de la imagen */
 }
-
+.btn-icon {
+  width: 20px; /* Ajusta el tamaño de la imagen según tus necesidades */
+  height: 20px; /* Ajusta el tamaño de la imagen según tus necesidades */
+  margin-right: 5px; /* Espacio entre la imagen y el texto */
+}
 .back-link {
-  font-size: 24px;
-  color: white;
+  top: 20px;
+  left: 20px;
+  font-size: 30px;
   cursor: pointer;
-}
-
-.report-container {
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  padding: 20px;
-  margin: 20px;
-}
-
-.report-header {
+  color: white;
   font-size: 24px;
+  z-index: 8; /* Asegura que el enlace esté por encima de la media luna */
+}
+
+.descripcion {
+  color: #000000;
   font-weight: bold;
-  margin-bottom: 10px;
-}
-
-.report-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.report-item {
-  margin: 10px 0;
-  font-size: 18px;
-  color: #333; /* Cambia el color del texto para mejor legibilidad */
-}
-
-.download-button {
-  background-color: #087902;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: background-color 0.3s;
-  margin-top: 20px; /* Agrega espacio entre el contenido y el botón */
-}
-
-.download-button:hover {
-  background-color: #086b02;
-}
-
-.footer {
-  background-color: #623100;
-  color: white;
+  font-family: value;
+  padding-top: 20px 30px; /* Ajusta el padding superior para separar más del elemento anterior */
+  font-size: 24px;
   text-align: center;
-  padding: 10px;
+  margin-top: 50px;
 }
+
+.row {
+margin: 50px auto; 
+align-items: center;
+padding-left: 10%; /* Ajusta el valor según tus necesidades */
+padding-right: 10%; 
+}
+
+.table-container {
+  max-height: 400px; 
+  max-width: 100%;
+  margin-top: 30px;
+  padding-top: 20px; /* Ajusta el valor según la cantidad de espacio que deseas */
+
+}
+
+.app-footer {
+  flex-shrink: 0;
+  margin-top: auto;
+}
+
+@media screen and (max-width: 320px) {
+/* smartphones, portrait iPhone, portrait 480x320 phones (Android) */
+img {
+    width: 70%;
+}
+.title {
+    font-weight: bold;
+    color: rgb(245, 245, 245);
+    font-family: value;
+    margin: 0%;
+    font-size: 24px;
+}
+.descripcion {
+    color: #000000;
+    font-weight: bold;
+    font-family: value;
+    padding-top: 3px;
+    font-size: 24px;
+}
+.tipoControl {
+    top: 45%;
+    border-top-left-radius: 60%;
+    border-top-right-radius: 60%;
+}
+}
+
+@media screen and (max-width:480px) and (min-width:320px) {
+/* smartphones, Android phones, landscape iPhone */
+img {
+    width: 80%;
+}
+.title {
+    color: rgb(245, 245, 245);
+    font-family: value;
+    margin: 0%;
+    font-size: 18px;
+}
+.descripcion {
+    color: #000000;
+    font-weight: bold;
+    font-family: value;
+    padding-top: 3px;
+    font-size: 24px;
+}
+.row {
+    margin-top: 90px;
+}
+label {
+    color: rgb(90, 90, 90)EA;
+    margin-bottom: 2%;
+    margin-top: 2%;
+}
+}
+
+@media screen and (max-width:600px) and (min-width:480px) {
+/* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+img {
+    width: 60%;
+}
+.title {
+    color: rgb(245, 245, 245);
+    font-family: value;
+    margin: 0%;
+    font-size: 18px;
+}
+.descripcion {
+    color: #000000;
+    font-weight: bold;
+    font-family: value;
+    padding-top: 3px;
+    font-size: 24px;
+}
+.row {
+    margin-top: 80px;
+}
+label {
+    color: rgb(90, 90, 90)EA;
+    margin-bottom: 2%;
+    margin-top: 2%;
+}
+}
+
+@media screen and (max-width:801px) and (min-width:600px) {
+/* tablet, landscape iPad, lo-res laptops ands desktops */
+img {
+    width: 35%;
+}
+.title {
+    color: rgb(245, 245, 245);
+    font-family: value;
+    margin: 0%;
+    font-size: 18px;
+}
+.descripcion {
+    font-family: value;
+    font-weight: bold;
+    font-family: value;
+    padding-top: 3px;
+    font-size: 24px;
+}
+.row {
+    margin-top: 1px;
+}
+label {
+    color: rgb(90, 90, 90)EA;
+    margin-bottom: 2%;
+    margin-top: 2%;
+}
+}
+
+@media screen and (max-width:1200px) and (min-width:801px) {
+/* big landscape tablets, laptops, and desktops */
+img {
+    width: 30%;
+}
+.title {
+    color: rgb(245, 245, 245);
+    font-family: value;
+    margin: 0%;
+    font-size: 18px;
+}
+.descripcion {
+    color: #000000;
+    font-weight: bold;
+    font-family: value;
+    padding-top: 3px;
+    font-size: 24px;
+}
+.row {
+    margin-top: 10px;
+}
+label {
+    color: rgb(90, 90, 90)EA;
+    margin-bottom: 2%;
+    margin-top: 2%;
+}
+}
+
+.identificador {
+display: flex;
+align-items: center;
+padding-top: -50%;
+}
+
+.color-circle {
+width: 25px;
+height: 25px;
+margin-right: 8px;
+border-radius: 50%;
+}
+
