--- a/src/app/components/report-control/report-control.component.html
+++ b/src/app/components/report-control/report-control.component.html
@@ -1,39 +1,40 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js"></script>
-<script src="/angular/angular.min.js"></script>
-  <script src="/Chart.js/Chart.min.js"></script>
-  <script src="/angular-chart.js/dist/angular-chart.min.js"></script>
-   <link rel="stylesheet" href="/angular-chart.js/dist/angular-chart.css">
 <nav class="navbar ">
     <div class="container-fluid">
-  
-      <div class="back-link">
-        <a routerLink="/tipoControl">
-          <i class="fas fa-arrow-left" style="color: rgb(255, 255, 255);"></i>
-          <!-- Icono de flecha hacia atrás -->
-        </a>
-      </div>
-      <h1 class="mx-auto" style="font-size: 15px;">FINCA LA BENDICIÓN</h1>
-      <div class="logo-circle">
-        <img src="/assets/img/logo.png" alt="logo" class="logo-img">
-      </div>
+
+        <div class="back-link">
+            <a routerLink="/tipoControl">
+                <i class="fas fa-arrow-left" style="color: rgb(255, 255, 255);" ></i>
+                <!-- Icono de flecha hacia atrás -->
+            </a>
+        </div>
+        <h1 class="mx-auto" style="font-size: 15px;">FINCA LA BENDICIÓN JUTIAPA</h1>
+        <div class="logo-circle">
+            <img src="/assets/img/logo.png" alt="logo" class="logo-img">
+        </div>
     </div>
-  </nav>
-<div class="report-container">
-    <h2>INVENTARIO GENERAL</h2>
-    <div class="report-content">
-        <p>Total de Lotes: {{ totalDiaIngresan }}</p>
-        <p>Total de Árboles en Control: {{ totalDiaAyer }}</p>
-        <p>Total de Arboles Infectados: {{ totalMes }}</p>
-        <p>Total de plagas encontradas: {{ totalPlagas }}</p>
-        <p>Total de enfermedades encontradas: {{ totalEnfermedades }}</p>
-    </div>
-    <div class="chart-container">
-     
-    </div>
-    <button (click)="generarPDF()" class="download-button">
-        <i class="fas fa-download"></i> Descargar PDF
-    </button>
+</nav>
+<div class="viewLote">
+        <div >
+            <h1  class="descripcion">ÁNALISIS DE CONTROL</h1>
+        </div>
+        <div class="table-container">
+            <div class="container">
+                <div *ngFor="let lote of lotes" class="card mx-auto" >
+                  <img class="img-fluid mx-auto my-3" style="max-width: 100px; max-height: 100px;" src="/assets/img/controlAnalisis.png" alt="">
+
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Lotes   Creados Hoy: 31/08/2023</li>
+                    <li class="list-group-item">Árboles Creados Hoy: 31/08/2023</li>
+                    <li class="list-group-item">Lotes Creados Ayer: 5</li>
+                    <li class="list-group-item">Árboles Creados Ayer: 31/08/2023</li>
+                    <li class="list-group-item">Cantidad Enfermedades Detectadas: 5</li>
+                    <li class="list-group-item">Latitud: 5.8551</li>
+                    <li class="list-group-item">Longitud: -9.15545</li>
+
+                  </ul>
+                </div>
+              </div>
+        </div>
 </div>
-<app-footer></app-footer>
+<app-footer class="app-footer"></app-footer>
